--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "newsscraper",
   "version": "1.0.0",
   "description": "A news scraper that allows users to save and take notes on articles of their choice.",
-  "main": "app.js",
+  "private": true,
   "scripts": {
+    "start": "node ./bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,8 +20,14 @@
   "dependencies": {
     "axios": "^0.19.1",
     "cheerio": "^1.0.0-rc.3",
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
-    "mongoose": "^5.8.7"
+    "hbs": "~4.0.4",
+    "http-errors": "~1.6.3",
+    "mongoose": "^5.8.7",
+    "morgan": "~1.9.1",
+    "nodemon": "^2.0.2"
   }
 }
